# Spatiotemporal-GNN-Benchmark-Suite

./: Dockerfile  Makefile  README.md  pyproject.toml
configs/: default.yaml  smoke.yaml
src/stgnn/: __init__.py  cli.py  data.py  graph.py  runner.py
src/stgnn/models/: dcrnn.py  graph_wavenet.py  mtgnn.py  stgcn.py
tests/: test_graph.py  test_models.py  test_runner.py
