[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stgnn"
version = "0.3.0"
description = "Spatio-temporal GNN benchmark suite (DCRNN, GraphWaveNet, STGCN, MTGNN) on a unified harness"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Arash Mozhdehi" }]
dependencies = [
  "torch>=2.1",
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "mlflow>=2.16",
  "wandb>=0.17",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.5"]

[project.scripts]
stgnn-bench = "stgnn.cli:bench_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
